界面：添加紧凑媒体卡片支持，优化富媒体消息布局和交互逻辑 - 更新富媒体消息的渲染逻辑以支持紧凑模式 - 调整音频和视频消息的尺寸和交互，提升用户体验 - 引入 RichChatMediaHoverState 以管理媒体悬停状态 - 优化音频和视频的工具提示和控制按钮显示